--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,13 +13,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up timestamp
+        id: timestamp
+        run: echo "TIMESTAMP=$(date +%Y.%m.%d.%H%M%S)" >> $GITHUB_ENV
+
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag spotify-api:$(date +%Y%m%d%H%M%S)
+        run: docker build . --file Dockerfile --tag spotify-api:${{ env.TIMESTAMP }}
 
       - name: Save Docker image as tarball
         run: |
-          docker save spotify-api:latest -o spotify-api-latest.tar
-          docker save spotify-api:$(date +%Y%m%d%H%M%S) -o spotify-api-$(date +%Y%m%d%H%M%S).tar
+          docker save spotify-api:${{ env.TIMESTAMP }} -o spotify-api-${{ env.TIMESTAMP }}.tar
 
       - name: Create a new release on GitHub
         if: github.event_name == 'push'
@@ -28,7 +31,7 @@ jobs:
           name: Release ${{ github.sha }}
           tag_name: v${{ github.run_number }}
           body: |
-            Automatic release of the latest Docker image.
+            Automatic release of the Docker image.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -37,7 +40,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            spotify-api-latest.tar
-            spotify-api-$(date +%Y%m%d%H%M%S).tar
+            spotify-api-${{ env.TIMESTAMP }}.tar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
